welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:38: error: Unmatched closing brace '}' ignored here
 }
 ^